--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,21 @@
 .App {
   text-align: center;
+  max-width: 30rem;
+  margin:4rem auto ;
 }
 
-/* body{
-background-color: #E4E4E1;
- background-image: radial-gradient(at top center, rgba(255,255,255,0.03) 0%, rgba(0,0,0,0.03) 100%), linear-gradient(to top, rgba(255,255,255,0.1) 0%, rgba(143,152,157,0.60) 100%);
- 	background-blend-mode: normal, multiply;
-} */
+
+.centeringDiv{
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+.bodydev {
+  margin-left: 100px;
+}
 
 body{
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   font-family: "Roboto", sans-serif;
   
@@ -82,9 +88,7 @@ div.content {
   }
 }
 
-/* #top {
-  position:fixed;
-  top:0px;
-  width:100%;
-  height:70px;
-} */
+.FullpagePrayer{
+  white-space: pre;
+ 
+}
